# sfcr-extractor

./: .gitignore  LICENSE  Makefile  README.md  ace_playbook.jsonl  diagnosis.md  pyproject.toml  requirements.txt  temp_test_extract.py  todo_fragen.md  todo_result_1.md  todo_result_2.md  todo_result_3.md  todo_result_4.md  todo_result_5.md  todo_result_6.md  todo_result_7.md  todo_result_8.md  todo_result_9.md  todos.md
.devcontainer/: devcontainer.json
artifacts/: sfcr.sqlite
data/: catalog.csv  manual_overrides.yaml
scripts/: cli.py  run_ui.py  test_ollama.py
sfcr/: config.py  db.py  final_values.py  manual_overrides.py  runtime_resources.py  ui_app.py
sfcr/data/: catalog.csv
sfcr/eval/: eval.py
sfcr/extract/: extractor.py  fields.yaml  schema.py  verify.py
sfcr/extract/tests/: test_extractor.py  test_verify.py
sfcr/ingest/: sfcr_ingest.py
sfcr/summarize/: summarize.py  test_summarize.py
sfcr/utils/: page_ranges.py  pdf_page_offset.py
tests/: test_cli.py  test_config.py  test_db.py  test_packaging.py  test_repo_hygiene.py  test_run_ui.py  test_test_ollama.py  test_ui_app.py
tools/: ui_app.py
var/ace_runs/: autobuild.jsonl  run_todos.jsonl
